update android build tooling to java 26